# semantic-search-middleware

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  app.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/sample/: README.md
docs/: PRD.md  ROADMAP.md  architecture.md
docs/adr/: 0001-use-pgvector.md
docs/superpowers/plans/: 2026-07-17-milestone-0-implementation-plan.md  2026-07-20-milestone-1-grounded-chat.md  2026-07-22-milestone-2-relationship-aware-indexing.md
docs/superpowers/specs/: 2026-07-17-milestone-0-vertical-slice-design.md  2026-07-20-milestone-1-grounded-chat-design.md  2026-07-22-milestone-2-relationship-aware-indexing-design.md
scripts/: index_source.py  init.sql  seed_source.sql
src/semantic_search_middleware/: __init__.py
src/semantic_search_middleware/api/: dependencies.py  main.py  schemas.py
src/semantic_search_middleware/config/: settings.py
src/semantic_search_middleware/connectors/: postgres.py
src/semantic_search_middleware/domain/: __init__.py  errors.py  models.py  ports.py
src/semantic_search_middleware/embeddings/: sentence_transformer.py
src/semantic_search_middleware/ingestion/: indexer.py  verbaliser.py  verbalizer.py
src/semantic_search_middleware/llm/: ollama.py
src/semantic_search_middleware/rag/: prompts.py
tests/integration/: test_chat.py  test_health.py  test_search.py
tests/unit/: test_chat_service.py  test_indexer.py  test_ollama_client.py  test_postgres_connector.py  test_prompts.py  test_verbaliser.py  test_verbalizer.py
(+7 files in other folders)
