[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "semantic-search-middleware"
version = "0.1.0"
description = "Semantic search and grounded chatbot middleware for relational databases"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116,<1",
  "uvicorn[standard]>=0.35,<1",
  "pydantic-settings>=2.10,<3",
  "sqlalchemy>=2.0.41,<3",
  "psycopg[binary]>=3.2.9,<4",
  "pgvector>=0.4.1,<1",
  "sentence-transformers>=5.0,<6",
  "httpx>=0.28,<1",
  "streamlit>=1.46,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4,<9",
  "pytest-asyncio>=1.0,<2",
  "ruff>=0.12,<1",
  "mypy>=1.16,<2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/semantic_search_middleware"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["semantic_search_middleware"]
